-----------
v4.2.14-git
-----------



-------
v4.2.13
-------

[jan] Fix sorting by due date with PHP < 5.5 (Bug #14507).


-------
v4.2.12
-------

[mjr] Fix fatal error caused by regression in sorting recurring tasks with due
      dates (Bug #14504).


-------
v4.2.11
-------

[mjr] Fix sorting recurring tasks by due date (Bug #14403).


-------
v4.2.10
-------

[mjr] Fix handling of start and due dates when syncing via EAS.
[jan] Avoid fatal errors if tasks don't have a UID.
[mjr] Fix parsing certain date formats (Bug #14348).
[jan] Fix deleteing alarms when completing a task.
[mjr] Require Horde_Perms::DELETE for including a tasklist as sync-able.


------
v4.2.9
------

[jan] Fix regression with date picker in tasks form (Bug #14303).
[mjr] Fix handling EAS categories/tags.


------
v4.2.8
------

[mjr] Honor date_format prefs in Task form (Bug #14287).
[jan] Update Greek translation (Limperis Antonis <limperis@cti.gr>).


------
v4.2.7
------

[mjr] Enforce child tasks must be completed before parent tasks in edit form
      (Bug #12308).
[jan] Use access rules compatible with both Apache 2.2 and 2.4.
[mjr] Fix possible fatal error due to tasks created with an alarm but no due
      date (Bug #14214).
[mjr] Fix storage of parent field when using Kolab driver (Bug #14197,
      mike.gabriel@das-netzwerkteam.de).
[mjr] Fix switching tab/filters when using Kolab driver (Bug #14196,
      mike.gabriel@das-netzwerkteam.de).
[mjr] Fix moving subtasks to another tasklist when parent task is moved (Bug
      #14209).
[mjr] Fix fatal error when saving tasks when system shares are present in
      certain cases.
[mjr] Return recurring tasks via listTimeObjects API (Bug #14137).
[mjr] Prevent orphaning tasks via the API.


------
v4.2.6
------

[jan] Update Italian translation.
[mjr] Fix indentation level when searching (Bug #14138).
[mjr] Remove object reference from Content when object is deleted (Bug #14112).