@@ -33,7 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [mjr] Avoid PHP warnings due to corrupt preference values (Bug #14585).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1779,7 +1779,7 @@
    <date>2016-11-09</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [mjr] Avoid PHP warnings due to corrupt preference values (Bug #14585).
    </notes>
   </release>
  </changelog>
